REGRESSION (r280460): 42 JSC test failures on Debug arm64 with ASSERTION FAILED: !m_needExceptionCheck https://bugs.webkit.org/show_bug.cgi?id=228652

Unreviewed unchecked exception fix.

Release scope before calling RegExpGlobalData::getBackref().


* runtime/RegExpConstructor.cpp:
(JSC::JSC_DEFINE_CUSTOM_GETTER):


Canonical link: https://commits.webkit.org/240121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280489 268f45cc-cd09-0410-ab3c-d52691b4dbfc